--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * Fall 2021 - Lab Cipher
 
-* Last name:
+* Last name: Gallo
 
-* First name:
+* First name: Natalie
 
-* GitHub username:
+* GitHub username: natalie-gallo
 
 * Notes:
 
